--- a/docs/visualize_gam_downstream.Rmd
+++ b/docs/visualize_gam_downstream.Rmd
@@ -389,7 +389,7 @@ pred_downstreamnew <- pred_downstream %>%
   filter(case_when(inund_fac2 == "none" ~ WTmwk >= minWTnone & WTmwk <= maxWTnone,
                    inund_fac2 == "short" ~ WTmwk >= minWTshort & WTmwk <= maxWTshort,
                    inund_fac2 == "long" ~ WTmwk >= minWTlong & WTmwk <= maxWTlong)) %>%
-  mutate(chl = 10^fit)
+  mutate(chl = exp^fit)
 
 max(pred_downstreamnew$log_qsdy)
 ```
@@ -420,6 +420,58 @@ dev.off()
 
 save(downstream_diff, downstream_same, file = here::here("data_model", "downstream_gam_plots.RData"))
 ```
+
+## Cat's code: same y axis 
+```{r}
+maxWTall = 16.6
+minWTall = 7.9
+
+d.shrt.hullsamey <- f_createpolygon(d.shrt.hull, maxQshort, minQshort, maxWTall, minWTall, "short")
+d.long.hullsamey <- f_createpolygon(d.long.hull, maxQlong, minQlong, maxWTall, minWTall, "long")
+d.none.hullsamey <- f_createpolygon(d.none.hull, maxQnone, minQnone, maxWTall, minWTall, "none")
+
+hull_downstreamsamey<- rbind(d.shrt.hullsamey, d.none.hullsamey, d.long.hullsamey) 
+```
+
+```{r}
+pred_downstreamsamey <- pred_downstreamnew <- pred_downstream %>%
+  filter(case_when(inund_fac2 == "none" ~ log_qsdy >= minQnone & log_qsdy <= maxQnone,
+                   inund_fac2 == "short" ~ log_qsdy >= minQshort & log_qsdy <= maxQshort,
+                   inund_fac2 == "long" ~ log_qsdy >= minQlong & log_qsdy <= maxQlong)) %>%
+  filter(case_when(inund_fac2 == "none" ~ WTmwk >= minWTall & WTmwk <= maxWTall,
+                   inund_fac2 == "short" ~ WTmwk >= minWTall & WTmwk <= maxWTall,
+                   inund_fac2 == "long" ~ WTmwk >= minWTall & WTmwk <= maxWTall)) %>%
+  filter(fit>0) %>% 
+  mutate(chl = 10^fit)
+```
+
+
+```{r}
+pred_downstreamsamey$inund_fac2 <- factor(pred_downstreamsamey$inund_fac2, levels = c("none", "short", "long"))
+hull_downstreamsamey$inund_fac2 <- factor(hull_downstreamsamey$inund_fac2, levels = c("none", "short", "long"))
+
+(downstream_diffsamey <- ggplot() + 
+  geom_tile(data = pred_downstreamsamey, aes(log_qsdy, WTmwk, fill = fit)) +
+  geom_polygon(data = hull_downstreamsamey, aes(x = log_qsdy, y = WTmwk), fill = "white", alpha = 0.7)+
+  geom_point(data = downstream_f, aes(log_qsdy, WTmwk), color = "gray6", shape = 1) +
+  viridis::scale_fill_viridis(option = "turbo") +
+  scale_y_continuous(expand = c(0,0)) +
+  scale_x_continuous(expand = c(0,0)) +
+  facet_wrap(~inund_fac2, scales = "free_x") + 
+  labs(x = "log Daily Flow (cfs)", y = "Mean weekly water temperature (°C)", fill = "log chl a\n(ug/L)", title = "downstream") +
+  theme_classic() +
+  theme(legend.position = "right"))
+```
+
+```{r}
+png(here::here("figures","downstream_gam_sameyscales.png"), width = 7.5, height = 4, units = "in", res = 300)
+downstream_diffsamey
+dev.off()
+
+save(downstream_diff, downstream_same, downstream_diffsamey, file = here::here("data_model", "downstream_gam_plots.RData"))
+```
+
+
 
 
 
