--- a/docs/visualize_gam_yolo.Rmd
+++ b/docs/visualize_gam_yolo.Rmd
@@ -414,7 +414,7 @@ pred_yolonew <- pred_yolo %>%
                    inund_fac2 == "short" ~ WTmwk >= minWTshort & WTmwk <= maxWTshort,
                    inund_fac2 == "long" ~ WTmwk >= minWTlong & WTmwk <= maxWTlong)) %>%
   filter(fit<5) %>%
-  mutate(chl = 10^fit)
+  mutate(chl = exp^fit)
 
 max(pred_yolonew$log_qsdy)
 ```
@@ -444,4 +444,57 @@ yolo_diff
 dev.off()
 
 save(yolo_diff, yolo_same, file = here::here("data_model", "yolo_gam_plots.RData"))
+```
+
+
+
+
+## Cat's code: same y axis 
+```{r}
+maxWTall = 19.5
+minWTall = 7.4
+
+yo.shrt.hullsamey <- f_createpolygon(yo.shrt.hull, maxQshort, minQshort, maxWTall, minWTall, "short")
+yo.long.hullsamey <- f_createpolygon(yo.long.hull, maxQlong, minQlong, maxWTall, minWTall, "long")
+yo.none.hullsamey <- f_createpolygon(yo.none.hull, maxQnone, minQnone, maxWTall, minWTall, "none")
+
+hull_yolosamey<- rbind(yo.shrt.hullsamey, yo.none.hullsamey, yo.long.hullsamey) 
+```
+
+```{r}
+pred_yolosamey <- pred_yolonew <- pred_yolo %>%
+  filter(case_when(inund_fac2 == "none" ~ log_qsdy >= minQnone & log_qsdy <= maxQnone,
+                   inund_fac2 == "short" ~ log_qsdy >= minQshort & log_qsdy <= maxQshort,
+                   inund_fac2 == "long" ~ log_qsdy >= minQlong & log_qsdy <= maxQlong)) %>%
+  filter(case_when(inund_fac2 == "none" ~ WTmwk >= minWTall & WTmwk <= maxWTall,
+                   inund_fac2 == "short" ~ WTmwk >= minWTall & WTmwk <= maxWTall,
+                   inund_fac2 == "long" ~ WTmwk >= minWTall & WTmwk <= maxWTall)) %>%
+  filter(fit<=5) %>% 
+  mutate(chl = exp^fit)
+```
+
+
+```{r}
+pred_yolosamey$inund_fac2 <- factor(pred_yolosamey$inund_fac2, levels = c("none", "short", "long"))
+hull_yolosamey$inund_fac2 <- factor(hull_yolosamey$inund_fac2, levels = c("none", "short", "long"))
+
+(yolo_diffsamey <- ggplot() + 
+  geom_tile(data = pred_yolosamey, aes(log_qsdy, WTmwk, fill = fit)) +
+  geom_polygon(data = hull_yolosamey, aes(x = log_qsdy, y = WTmwk), fill = "white", alpha = 0.7)+
+  geom_point(data = yolo_f, aes(log_qsdy, WTmwk), color = "gray6", shape = 1) +
+  viridis::scale_fill_viridis(option = "turbo") +
+  scale_y_continuous(expand = c(0,0)) +
+  scale_x_continuous(expand = c(0,0)) +
+  facet_wrap(~inund_fac2, scales = "free_x") + 
+  labs(x = "log Daily Flow (cfs)", y = "Mean weekly water temperature (°C)", fill = "log chl a\n(ug/L)", title = "yolo") +
+  theme_classic() +
+  theme(legend.position = "right"))
+```
+
+```{r}
+png(here::here("figures","yolo_gam_sameyscales.png"), width = 7.5, height = 4, units = "in", res = 300)
+yolo_diffsamey
+dev.off()
+
+save(yolo_diff, yolo_same, yolo_diffsamey, file = here::here("data_model", "yolo_gam_plots.RData"))
 ```
