--- a/docs/combine_model_plots.Rmd
+++ b/docs/combine_model_plots.Rmd
@@ -186,45 +186,48 @@ flow <- ggplot(data_bp) + geom_jitter(aes(x = region, y = Q_sday, color = inund_
 (boxplot2 <- wt_t / flow_t /  chlorophyll_t + plot_layout(guides = "collect")& theme(legend.position = "none"))
 ```
 
+
+# THIS ONE
 # By region and inundation duration
 ```{r}
 (chlorophyll <- ggplot(data_bp) + 
-   geom_jitter(aes(x = inund_fac2, y = chlorophyll, color = region, alpha = 0.4)) +
-  geom_boxplot(aes(x = inund_fac2, y = chlorophyll), alpha = 0, size = 0.6) + 
+   geom_jitter(aes(x = inund_fac2, y = chlorophyll, color = inund_fac2), alpha = 0.4) +
+  geom_boxplot(aes(x = inund_fac2, y = chlorophyll ),alpha = 0, size = 0.6) + 
   scale_color_viridis(discrete = TRUE, option = "turbo") +
+   scale_y_continuous(sec.axis = sec_axis(~log(.), name = "log chlorophyll (ug/L)", breaks = c(0, 3.0, 3.69, 4.09))) +
    facet_wrap(~region) +
   labs(y = "Chlorophyll a (ug/L)", color = "Region") +
   theme_bw() +
   theme(axis.title.x = element_blank()))
 
-(chlorophyll_t <- ggplot(data_bp) + geom_jitter(aes(x = inund_fac2, y = log_chla, color = region), alpha = 0.4) +
-  geom_boxplot(aes(x = inund_fac2, y = log_chla), alpha = 0, size = 0.6) + 
-       facet_wrap(~region) +
-  scale_color_viridis(discrete = TRUE, option = "turbo") +
-  labs(y = "Log Chlorophyll a (ug/L)", color = "Region") +
-  theme_bw() +
-  theme(axis.title.x = element_blank()))
+# (chlorophyll_t <- ggplot(data_bp) + geom_jitter(aes(x = inund_fac2, y = log_chla, color = region), alpha = 0.4) +
+#   geom_boxplot(aes(x = inund_fac2, y = log_chla), alpha = 0, size = 0.6) + 
+#        facet_wrap(~region) +
+#   scale_color_viridis(discrete = TRUE, option = "turbo") +
+#   labs(y = "Log Chlorophyll a (ug/L)", color = "Region") +
+#   theme_bw() +
+#   theme(axis.title.x = element_blank()))
   
   
-flow_t <- ggplot(data_bp) + geom_jitter(aes(x = inund_fac2, y = log_qsdy, color = region), alpha = 0.4) +
-  geom_boxplot(aes(x = inund_fac2, y = log_qsdy), alpha = 0, size = 0.6) + 
-     facet_wrap(~region) +
-  scale_color_viridis(discrete = TRUE, option = "turbo") +
-  labs(y = "Log Daily\nMean Flow (cfs)", color = "Region") +
-  theme_bw() +
-  theme(axis.title.x = element_blank())
+# flow_t <- ggplot(data_bp) + geom_jitter(aes(x = inund_fac2, y = log_qsdy, color = inund_fac2), alpha = 0.4) +
+#   geom_boxplot(aes(x = inund_fac2, y = log_qsdy), alpha = 0, size = 0.6) + 
+#      facet_wrap(~region) +
+#   scale_color_viridis(discrete = TRUE, option = "turbo") +
+#   labs(y = "Log Daily\nMean Flow (cfs)", color = "Region") +
+#   theme_bw() +
+#   theme(axis.title.x = element_blank())
 
-flow <- ggplot(data_bp) + geom_jitter(aes(x = inund_fac2, y = Q_sday, color = region), alpha = 0.4) +
+(flow <- ggplot(data_bp) + geom_jitter(aes(x = inund_fac2, y = Q_sday, color = inund_fac2), alpha = 0.4) +
   geom_boxplot(aes(x = inund_fac2, y = Q_sday), alpha = 0, size = 0.6) + 
      facet_wrap(~region) +
   scale_color_viridis(discrete = TRUE, option = "turbo") +
+  scale_y_continuous(breaks = seq(0, 2.75e05, 50000), sec.axis = sec_axis(~log(.), name = "log Flow (cfs)",  breaks = c(0, 10.82, 11.5, 11.9, 12.2, 12.43))) +
   labs(y = "Daily Mean Flow (cfs)", color = "Region") +
   theme_bw() +
-  theme(axis.title.x = element_blank())
+  theme(axis.title.x = element_blank()))
 
-(boxplots_flow <- flow_t /flow + plot_layout(guides = "collect") & theme(legend.position = "top"))
 
-(wt_t <- ggplot(data_bp) + geom_jitter(aes(x = inund_fac2, y = WTmwk, color = region), alpha = 0.4) +
+(wt <- ggplot(data_bp) + geom_jitter(aes(x = inund_fac2, y = WTmwk, color = inund_fac2), alpha = 0.4) +
   geom_boxplot(aes(x = inund_fac2, y = WTmwk), alpha = 0, size = 0.6) + 
        facet_wrap(~region) +
   scale_color_viridis(discrete = TRUE, option = "turbo") +
@@ -233,30 +236,80 @@ flow <- ggplot(data_bp) + geom_jitter(aes(x = inund_fac2, y = Q_sday, color = re
   theme(axis.title.x = element_blank(),
         legend.position = "none"))
 
-(boxplot3 <- wt_t / flow_t /  chlorophyll_t + plot_layout(guides = "collect")& theme(legend.position = "none"))
+(boxplot3 <- wt / flow /  chlorophyll + plot_layout(guides = "collect")& theme(legend.position = "none"))
+```
+
+Notches
+```{r}
+(chlorophyll <- ggplot(data_bp) + 
+   geom_jitter(aes(x = inund_fac2, y = chlorophyll, color = inund_fac2), alpha = 0.4) +
+  geom_boxplot(aes(x = inund_fac2, y = chlorophyll ), notch = TRUE, alpha = 0, size = 0.6) + 
+  scale_color_viridis(discrete = TRUE, option = "turbo") +
+   scale_y_continuous(sec.axis = sec_axis(~log(.), name = "log chlorophyll (ug/L)", breaks = c(0, 3.0, 3.69, 4.09))) +
+   facet_wrap(~region) +
+  labs(y = "Chlorophyll a (ug/L)", color = "Region") +
+  theme_bw() +
+  theme(axis.title.x = element_blank()))
+
+# (chlorophyll_t <- ggplot(data_bp) + geom_jitter(aes(x = inund_fac2, y = log_chla, color = region), alpha = 0.4) +
+#   geom_boxplot(aes(x = inund_fac2, y = log_chla), alpha = 0, size = 0.6) + 
+#        facet_wrap(~region) +
+#   scale_color_viridis(discrete = TRUE, option = "turbo") +
+#   labs(y = "Log Chlorophyll a (ug/L)", color = "Region") +
+#   theme_bw() +
+#   theme(axis.title.x = element_blank()))
+  
+  
+# flow_t <- ggplot(data_bp) + geom_jitter(aes(x = inund_fac2, y = log_qsdy, color = inund_fac2), alpha = 0.4) +
+#   geom_boxplot(aes(x = inund_fac2, y = log_qsdy), alpha = 0, size = 0.6) + 
+#      facet_wrap(~region) +
+#   scale_color_viridis(discrete = TRUE, option = "turbo") +
+#   labs(y = "Log Daily\nMean Flow (cfs)", color = "Region") +
+#   theme_bw() +
+#   theme(axis.title.x = element_blank())
+
+(flow <- ggplot(data_bp) + geom_jitter(aes(x = inund_fac2, y = Q_sday, color = inund_fac2), alpha = 0.4) +
+  geom_boxplot(aes(x = inund_fac2, y = Q_sday), notch = TRUE, alpha = 0, size = 0.6) + 
+     facet_wrap(~region) +
+  scale_color_viridis(discrete = TRUE, option = "turbo") +
+  scale_y_continuous(breaks = seq(0, 2.75e05, 50000), sec.axis = sec_axis(~log(.), name = "log Flow (cfs)",  breaks = c(0, 10.82, 11.5, 11.9, 12.2, 12.43))) +
+  labs(y = "Daily Mean Flow (cfs)", color = "Region") +
+  theme_bw() +
+  theme(axis.title.x = element_blank()))
+
+
+(wt <- ggplot(data_bp) + geom_jitter(aes(x = inund_fac2, y = WTmwk, color = inund_fac2), alpha = 0.4) +
+  geom_boxplot(aes(x = inund_fac2, y = WTmwk), notch = TRUE, alpha = 0, size = 0.6) + 
+       facet_wrap(~region) +
+  scale_color_viridis(discrete = TRUE, option = "turbo") +
+  labs(y = "Mean Weekly\nWater Temperature (°C)", color = "Region") +
+  theme_bw() +
+  theme(axis.title.x = element_blank(),
+        legend.position = "none"))
+
+(boxplot_notch <- wt / flow /  chlorophyll + plot_layout(guides = "collect")& theme(legend.position = "none"))
 ```
 
 
 ```{r}
 (histogram_qsdy_t <- ggplot(data_bp, aes(log_qsdy)) + 
    labs(x = "Log Daily Mean Flow (cfs)") +
-   geom_histogram(color = "black", binwidth = 0.5) + theme_bw()) 
+   geom_histogram(color = "black", fill = "gray50" ,binwidth = 0.5, alpha = 0.4) + theme_bw()) 
 
 (histogram_qsdy <- ggplot(data_bp, aes(Q_sday)) + 
     labs(x = "Daily Mean Flow (cfs)") +
-   geom_histogram(color = "black", binwidth = 5000) + theme_bw()) 
+   geom_histogram(color = "black", fill = "gray50", binwidth = 5000) + theme_bw()) 
 
 (histogram_chl_t <- ggplot(data_bp, aes(log_chla)) + 
-   geom_histogram(color = "black", binwidth = 0.2) + 
+   geom_histogram(color = "black", fill = "olivedrab" ,binwidth = 0.2, alpha = 0.4) + 
     labs(x = "Log Chlorophyll a (ug/L)") + theme_bw()) 
 
 (histogram_chl <- ggplot(data_bp, aes(chlorophyll)) + 
     labs(x = "Chlorophyll a (ug/L)") + 
-   geom_histogram(color = "black", binwidth = 2) + theme_bw())
+   geom_histogram(color = "black",fill = "olivedrab" , binwidth = 2, alpha = 0.9) + theme_bw())
 
-(histos <- (histogram_qsdy_t/histogram_qsdy) | (histogram_chl_t/histogram_chl))
+(histos <- (histogram_qsdy/histogram_qsdy_t) | (histogram_chl/histogram_chl_t))
 
-(boxplot4 <- histos/ wt_t / flow_t /  chlorophyll_t  + plot_layout(guides = "collect")& theme(legend.position = "top"))
 ```
 
 
@@ -296,7 +349,7 @@ dev.off()
 
 
 
-
+# Write below
 
 png(here::here("figures","boxplots_databyInund.png"), width = 8, height = 8, units = "in", res = 300)
 boxplot2
@@ -306,8 +359,8 @@ png(here::here("figures","boxplots_databyRegion.png"), width = 8, height = 8, un
 boxplot3
 dev.off()
 
-png(here::here("figures","boxplots_datawithHistos.png"), width = 8, height = 8, units = "in", res = 300)
-boxplot4
+png(here::here("figures","boxplots_databyRegion_notch.png"), width = 8, height = 8, units = "in", res = 300)
+boxplot_notch
 dev.off()
 
 png(here::here("figures","histos.png"), width = 6, height = 4, units = "in", res = 300)
