--- a/docs/combine_model_plots.Rmd
+++ b/docs/combine_model_plots.Rmd
@@ -191,12 +191,12 @@ flow <- ggplot(data_bp) + geom_jitter(aes(x = region, y = Q_sday, color = inund_
 # By region and inundation duration
 ```{r}
 (chlorophyll <- ggplot(data_bp) + 
-   geom_jitter(aes(x = inund_fac2, y = chlorophyll, color = inund_fac2), alpha = 0.4) +
-  geom_boxplot(aes(x = inund_fac2, y = chlorophyll ),alpha = 0, size = 0.6) + 
+   geom_jitter(aes(x = inund_fac2, y = log_chla, color = inund_fac2), alpha = 0.4) +
+  geom_boxplot(aes(x = inund_fac2, y = log_chla ),alpha = 0, size = 0.6) + 
   scale_color_viridis(discrete = TRUE, option = "turbo") +
-   scale_y_continuous(sec.axis = sec_axis(~log(.), name = "log chlorophyll (ug/L)", breaks = c(0, 3.0, 3.69, 4.09))) +
+  scale_y_continuous(breaks = seq(-2, 5, 1), sec.axis = sec_axis(~exp(.), name = "Chlorophyll a (ug/L)", breaks = c(0.37, 1, 2.71, 7.39, 20.09, 54.6))) +
    facet_wrap(~region) +
-  labs(y = "Chlorophyll a (ug/L)", color = "Region") +
+  labs(y = "log Chlorophyll a \n(ug/L)", color = "Region") +
   theme_bw() +
   theme(axis.title.x = element_blank()))
 
@@ -217,12 +217,14 @@ flow <- ggplot(data_bp) + geom_jitter(aes(x = region, y = Q_sday, color = inund_
 #   theme_bw() +
 #   theme(axis.title.x = element_blank())
 
-(flow <- ggplot(data_bp) + geom_jitter(aes(x = inund_fac2, y = Q_sday, color = inund_fac2), alpha = 0.4) +
-  geom_boxplot(aes(x = inund_fac2, y = Q_sday), alpha = 0, size = 0.6) + 
+(flow <- ggplot(data_bp) + 
+    geom_jitter(aes(x = inund_fac2, y = log_qsdy, color = inund_fac2), alpha = 0.4) +
+    geom_boxplot(aes(x = inund_fac2, y = log_qsdy), alpha = 0, size = 0.6) + 
      facet_wrap(~region) +
   scale_color_viridis(discrete = TRUE, option = "turbo") +
-  scale_y_continuous(breaks = seq(0, 2.75e05, 50000), sec.axis = sec_axis(~log(.), name = "log Flow (cfs)",  breaks = c(0, 10.82, 11.5, 11.9, 12.2, 12.43))) +
-  labs(y = "Daily Mean Flow (cfs)", color = "Region") +
+    scale_y_continuous(sec.axis = sec_axis(~exp(.), name = "Mean Daily Flow (cfs)", breaks = c(148.4, 1808.0, 22026.5,268337.3)))+
+  # scale_y_continuous(breaks = seq(0, 15, 3), sec.axis = sec_axis(~exp(.), name = "Flow (cfs)")) +
+  labs(y = "log Mean \nDaily Flow (cfs)", color = "Region") +
   theme_bw() +
   theme(axis.title.x = element_blank()))
 
