--- a/data_publication/R/raw_data_summary.Rmd
+++ b/data_publication/R/raw_data_summary.Rmd
@@ -109,7 +109,7 @@ data_tbl <- data_tbl %>%
 
 flextable(data_tbl)
 
-write_csv(data_tbl, "C:/Users/estumpne/Documents/R/swg-21-connectivity/data_publication/R/raw_data_summary_inun.csv")
+write_csv(data_tbl, "C:/Users/estumpne/Documents/R/swg-21-connectivity/data_publication/R/raw_data_summary_region_inun.csv")
 
 #summarize by region 
 
@@ -159,6 +159,57 @@ data_tbl2$sd_Q_sday <- round(data_tbl2$sd_Q_sday, 0)
 flextable(data_tbl2)
 
 write_csv(data_tbl2, "C:/Users/estumpne/Documents/R/swg-21-connectivity/data_publication/R/raw_data_summary_region.csv")
+
+#summarize by inundation
+
+#summarize by region 
+
+data_tbl3 <- filtdata %>%
+  select(chlorophyll, WTmday, Q_sday, inundation, water_year)
+
+data_tbl3 <- unique(data_tbl3)
+
+data_tbl3 <- data_tbl3 %>%
+  group_by(inundation) %>%
+  summarize(min_chla = min(chlorophyll),
+            max_chla = max(chlorophyll),
+            mean_chla = mean(chlorophyll),
+            r_chla = max_chla-min_chla,
+            sd_chla = sd(chlorophyll),
+            min_WTmday = min(WTmday),
+            max_WTmday = max(WTmday),
+            mean_WTmday = mean(WTmday),
+            r_WTmday = max_WTmday - min_WTmday,
+            sd_WTmday = sd(WTmday),
+            min_Q_sday = min(Q_sday),
+            max_Q_sday = max(Q_sday),
+            mean_Q_sday = mean(Q_sday),
+            sd_Q_sday = sd(Q_sday),
+            n = n())
+
+#round values
+data_tbl3$min_chla <- round(data_tbl3$min_chla, 1)
+data_tbl3$max_chla <- round(data_tbl3$max_chla, 1)
+data_tbl3$mean_chla <- round(data_tbl3$mean_chla, 1)
+data_tbl3$r_chla <- round(data_tbl3$r_chla, 1)
+data_tbl3$sd_chla <- round(data_tbl3$sd_chla, 1)
+data_tbl3$min_WTmday <- round(data_tbl3$min_WTmday, 1)
+data_tbl3$max_WTmday <- round(data_tbl3$max_WTmday, 1)
+data_tbl3$mean_WTmday <- round(data_tbl3$mean_WTmday, 1)
+data_tbl3$r_WTmday <- round(data_tbl3$r_WTmday, 1)
+data_tbl3$sd_WTmday <- round(data_tbl3$sd_WTmday, 1)
+data_tbl3$min_Q_sday <- round(data_tbl3$min_Q_sday, 0)
+data_tbl3$max_Q_sday <- round(data_tbl3$max_Q_sday, 0)
+data_tbl3$mean_Q_sday <- round(data_tbl3$mean_Q_sday, 0)
+data_tbl3$sd_Q_sday <- round(data_tbl3$sd_Q_sday, 0)
+
+
+#data_tbl2<- data_tbl2 %>%
+  #mutate_at(vars(-c(inun, n), funs(round(., 1))))
+
+flextable(data_tbl3)
+
+write_csv(data_tbl3, "C:/Users/estumpne/Documents/R/swg-21-connectivity/data_publication/R/raw_data_summary_inun.csv")
 
 
 ```
